--- a/src/base-components/present/footHtml/present-init.html
+++ b/src/base-components/present/footHtml/present-init.html
@@ -21,7 +21,7 @@
 				}
 			})
 		}
-		if (navigator.presentation.receiver) {
+		if (navigator.presentation && navigator.presentation.receiver) {
 			navigator.presentation.receiver.connectionList.then(list => {
 				list.connections.map(connection => addConnection(connection))
 				list.addEventListener('connectionavailable', (event) => {
